# ws_embeddings_project

./: README.md  embedings.ipynb  main.py  pyproject.toml  requirements.txt
app/: main.py
app/files/: el_principito copia.txt
app/static/css/: style.css
app/static/js/: script.js
app/templates/: index.html
models/: question_answer_jinaAPI.py  question_answer_paraphrase.py
point5_bonus_server/: pyproject.toml  requirements.txt
point5_bonus_server/app/: main.py
point5_bonus_server/app/files/: Lab3.txt
point5_bonus_server/app/models/: question_answer_paraphrase.py
point5_bonus_server/app/static/css/: style.css
point5_bonus_server/app/static/js/: script.js
point5_bonus_server/app/templates/: index.html
static/css/: style.css
static/js/: script.js
suggested_text/: prueba.txt
